[package]
name = "bondcurve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bondcurve"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = [
    "metadata",
    "associated_token",
    "mint",
    "token",
    "token_2022",
] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
num-traits = "0.2.15"
referrerstorage = { path = "../../../referrerstorage/programs/referrerstorage", features = [
    "no-entrypoint",
] }

raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "no-entrypoint",
    "cpi",
    "devnet",
] }
mpl-token-metadata = { version = "1.13.2", features = ["no-entrypoint"] }
