[package]
name = "fairmint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fairmint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = [
    "metadata",
    "associated_token",
    "mint",
    "token",
    "token_2022",
] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
num-traits = "0.2.15"
# amm-anchor = { git = "https://github.com/raydium-io/raydium-contract-instructions", package = "amm-anchor" }
# solana-program = { version = "1.16.25" }
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "no-entrypoint",
    "cpi",
    # "devnet",        # important
] }
mpl-token-metadata = { version = "1.13.2", features = ["no-entrypoint"] }
